--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_DOMAIN=localhost:3065
-FIREBASE_KEY=
-FIREBASE_SECRET=
+API_DOMAIN=http://localhost:3065
+FIREBASE_KEY=AIzaSyCFgZFACsZXCqdbQ50jWxj7Wsh3gH8unfI
 FIREBASE_PROJECT_ID=teamnis-95982
+FIREBASE_AUTH_DOMAIN=teamnis-95982.firebaseapp.com
