--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
+    "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
     "firebase": "^10.10.0",
+    "jose": "^5.2.4",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
