--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material-nextjs": "^5.15.11",
     "@prisma/client": "^5.12.1",
     "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "@tanstack/react-query-next-experimental": "^5.29.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
